Bug#22168, "Inserting bad early dates"

Changed StorageInterface::decodeRecord() to return values of type
MYSQL_TYPE_DATETIME directly to the server without conversion.